--- a/index.html
+++ b/index.html
@@ -27,5 +27,18 @@
             </div>
         </div>
     </header>
+    <main>
+        <section id="start">
+            <div class="container flex">
+                <div>
+                    <h1>Tiago Elias</h1>
+                    <h2>Desenvolvedor backend</h2>
+                </div>
+                <div>
+                    <img src="images/eu640-640.jpeg" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
